deploy/k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kjx-lb
  namespace: kjx-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: kjxlfs.poc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kjx-headless-svc
                port:
                  number: 80
